@@ -6,6 +6,9 @@
  * Preserve port and username in parsed HTTP URLs.
    (Jelmer Vernooĳ)
 
+ * Add basic server side implementation of ``git-upload-archivw``.
+   (Jelmer Vernooĳ)
+
 0.19.7	2018-11-05
 
  CHANGES
